[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
/(
    geonode/.*/migrations/.*
  | geonode/.*/settings.py
  | management
  | scripts
  | docs
  | static
  | migrations
  | node_modules
)/
'''


[tool.poetry]
name = "GeoNode"
version = "3.1.0.dev1597389735"
homepage = "http://geonode.org"
description = "Application for serving and sharing geospatial data"
license = "GPL"
classifiers = ["Development Status :: 5 - Production/Stable"]
authors = ["GeoNode Developers <dev@geonode.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
amqp = "==2.6.1"
beautifulsoup4 = "==4.9.1"
boto3 = "==1.14.39"
celery = "==4.4.7"
coverage = "==5.2.1"
decorator = "==4.4.2"
defusedxml = "==0.6.0"
deprecated = "==1.2.10"
dj-database-url = "==0.5.0"
dj-pagination = "==2.5.0"
django = ">=3"
django-allauth = "==0.42.0"
django-appconf = "==1.0.4"
django-autocomplete-light = "==3.5.1"
django-bootstrap3-datetimepicker-2 = "==2.8.2"
django-celery-beat = "==2.0.0"
django-celery-monitor = "<=1.1.2"
django-cors-headers = "==3.4.0"
django-downloadview = "==1.10"
django-filter = "==2.3.0"
django-floppyforms = "<1.10.0"
django-forms-bootstrap = "<=3.1.0"
django-geonode-client = "==1.0.9"
django-geonode-mapstore-client = "git+https://github.com/GeoNode/geonode-mapstore-client.git"
django-grappelli = "==2.14.2"
django-guardian = "<2.3.1"
django-haystack = "==2.8.1"
django-imagekit = "==4.0.2"
django-invitations = "<1.9.4"
django-ipware = "<3.1"
django-jsonfield = "==1.4.0"
django-jsonfield-compat = "==0.4.4"
django-leaflet = "==0.27.1"
django-markdownify = "==0.8.1"
django-modeltranslation = "<0.16.0,>=0.11"
django-mptt = "==0.11.0"
django-polymorphic = "==2.1.2"
django-recaptcha = "==2.0.6"
django-storages = "==1.9.1"
django-taggit = "==1.3.0"
django-tastypie = "<0.15.0"
django-tinymce = "==3.0.2"
django-treebeard = "==4.3.1"
djangorestframework = ">=3.11.1"
djangorestframework-guardian = "==0.3.0"
docker = "==4.3.0"
drf-writable-nested = "==0.6.1"
elasticsearch = "<8.0.0,>=2.0.0"
factory-boy = "==2.12.0"
flake8 = "==3.8.3"
geoip2 = "==3.0.0"
geonode-announcements = "==2.0.2"
geonode-avatar = "==5.0.7"
geonode-dialogos = "==3.0.1"
geonode-django-activity-stream = "==0.9.0"
geonode-oauth-toolkit = "==2.0.0"
geonode-user-messages = "==2.0.1"
geoserver-restconfig = "==2.0.4.6"
gisdata = "==0.5.4"
gn-arcrest = "==10.5.1"
gn-gsimporter = "==2.0.1"
gunicorn = "==20.0.4"
httplib2 = "<0.18.2"
hyperlink = "==20.0.1"
idna = "<2.11,>=2.5"
inflection = "<0.5.1"
invoke = "==1.4.1"
jdcal = "==1.4.1"
jsonfield = "==3.1.0"
kombu = "==4.6.11"
lxml = "==4.5.2"
markdown = "==3.2.2"
mercantile = "==1.1.5"
mock = "<5.0.0"
numpy = "==1.19.*"
oauthlib = "==3.1.0"
owslib = "==0.20.0"
parse-type = "==0.5.2"
paver = "==1.3.4"
pillow = "==7.2.0"
pinax-notifications = "==6.0.0"
pinax-ratings = "==4.0.0"
pip = "==20.1.1"
psutil = "==5.7.2"
psycopg2 = "==2.8.5"
pycountry = "*"
pycsw = "==2.4.2"
pyopenssl = "==19.1.0"
pyproj = "==2.6.1.post1"
pytest = "==6.0.1"
pytest-bdd = "==3.4.0"
pytest-django = "==3.9.0"
pytest-splinter = "==2.1.0"
python-dateutil = "==2.8.1"
python-memcached = "<=1.59"
python-resize-image = "==1.1.19"
python-slugify = "==4.0.1"
pytz = "==2020.1"
pyyaml = ">=4.2b1"
requests = "==2.24.0"
requests-toolbelt = "==0.9.1"
setuptools = "==49.2.0"
shapely = "==1.7.0"
six = "==1.15.0"
splinter = "==0.13.0"
sqlalchemy = "==1.3.18"
timeout-decorator = "==0.4.1"
tqdm = "==4.48.2"
twisted = "==20.3.0"
urllib3 = "==1.25.10"
user-agents = "*"
uwsgi = "==2.0.19.1"
wrapt = "==1.12.1"
xmljson = "*"
xmltodict = "<0.12.1"




[tool.dephell.main]
from = {format = "setuppy", path = "setup.py"}
to = {format = "poetry", path = "pyproject.toml"}
[build-system]
requires = ["setuptools >= 40.8", "pip >= 19.1"]
build-backend = "setuptools.build_meta"

